cluster_conf_files/iptables/mixednode1_iptables.txt
# Generated by iptables-save v1.4.7 on Tue Feb  9 12:27:44 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [112724:22336682]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -i eth1 -j ACCEPT 
-A INPUT -s 62.82.24.134/32 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 62.82.197.162/32 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 136.243.53.81/32 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 136.243.53.83/32 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 136.243.53.84/32 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 62.82.24.134/32 -p tcp -m state --state NEW -m tcp --dport 9200 -j ACCEPT 
-A INPUT -s 62.82.24.134/32 -p tcp -m state --state NEW -m tcp --dport 9300 -j ACCEPT 
-A INPUT -s 62.82.24.134/32 -p tcp -m state --state NEW -m tcp --dport 8600 -j ACCEPT 
-A INPUT -s 62.82.24.134/32 -p tcp -m state --state NEW -m tcp --dport 8601 -j ACCEPT 
-A INPUT -s 62.82.24.134/32 -p tcp -m state --state NEW -m tcp --dport 5050 -j ACCEPT 
-A INPUT -s 62.82.24.134/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,9200,9300,2112,2172,2182,8600,8601,5050,50070,4040,9601,5051 -j ACCEPT 
-A INPUT -s 62.82.197.162/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,9200,9300,2112,2172,2182,8600,8601,5050,50070,4040,9601,5051 -j ACCEPT 
-A INPUT -s 147.229.8.0/24 -p tcp -m state --state NEW -m tcp --dport 9200 -j ACCEPT 
-A INPUT -s 147.229.8.0/24 -p tcp -m state --state NEW -m tcp --dport 8600 -j ACCEPT 
-A INPUT -s 147.229.8.0/24 -p tcp -m state --state NEW -m tcp --dport 8601 -j ACCEPT 
-A INPUT -s 147.229.8.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 147.229.8.0/24 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 194.55.30.0/24 -p tcp -m state --state NEW -m tcp --dport 9200 -j ACCEPT 
-A INPUT -s 194.55.30.0/24 -p tcp -m state --state NEW -m tcp --dport 8600 -j ACCEPT 
-A INPUT -s 194.55.30.0/24 -p tcp -m state --state NEW -m tcp --dport 8601 -j ACCEPT 
-A INPUT -s 194.55.30.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 194.55.30.0/24 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 194.55.26.0/24 -p tcp -m state --state NEW -m tcp --dport 9200 -j ACCEPT 
-A INPUT -s 194.55.26.0/24 -p tcp -m state --state NEW -m tcp --dport 8600 -j ACCEPT 
-A INPUT -s 194.55.26.0/24 -p tcp -m state --state NEW -m tcp --dport 8601 -j ACCEPT 
-A INPUT -s 194.55.26.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 194.55.26.0/24 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 89.101.80.226/32 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 89.101.80.226/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,8600,9200,9300 -j ACCEPT 
-A INPUT -s 46.227.13.193/32 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 46.227.13.193/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,8600,9200,9300 -j ACCEPT 
-A INPUT -s 140.203.154.0/24 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 140.203.154.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,8600,9200,9300 -j ACCEPT 
-A INPUT -s 140.203.155.0/24 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 140.203.155.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,8600,9200,9300 -j ACCEPT 
-A INPUT -s 93.63.190.66/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,8600,9200,9300 -j ACCEPT 
-A INPUT -s 132.231.59.240/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 8600 -j ACCEPT 
-A INPUT -s 217.26.90.194/32 -p tcp -m state --state NEW -m tcp --dport 8600 -j ACCEPT 
-A INPUT -s 217.26.90.194/32 -p tcp -m state --state NEW -m tcp --dport 8601 -j ACCEPT 
-A INPUT -s 132.231.141.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,8600,8601,9200,9300 -j ACCEPT 
-A INPUT -s 176.74.139.227/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,8600,8601,9200,9300 -j ACCEPT 
-A INPUT -s 93.63.190.66/32 -p tcp -m state --state NEW -m tcp --match multiport --dports 8600,8601 -j ACCEPT
-A INPUT -s 217.26.90.194/32 -p tcp -m state --state NEW -m tcp --match multiport --dports 8600,8601 -j ACCEPT
-A INPUT -s 147.229.8.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,8600,8601,9200,9300 -j ACCEPT 
-A INPUT -s 138.4.3.173/25 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,8600,8601,9200,9300 -j ACCEPT
-A INPUT -s 77.240.177.148/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,8600,8601,9200,9300 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Tue Feb  9 12:27:44 2016
