cluster_conf_files/iptables/mixednode2_iptables.txt
# Generated by iptables-save v1.4.7 on Tue Sep  8 09:34:52 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [8965905:2479577303]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -i eth1 -j ACCEPT 
-A INPUT -s 62.82.24.134/32 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 62.82.197.162/32 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 136.243.53.81/32 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 136.243.53.83/32 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 136.243.53.84/32 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 62.82.24.134/32 -p tcp -m state --state NEW -m tcp --dport 9200 -j ACCEPT 
-A INPUT -s 62.82.24.134/32 -p tcp -m state --state NEW -m tcp --dport 9300 -j ACCEPT 
-A INPUT -s 62.82.24.134/32 -p tcp -m state --state NEW -m tcp --dport 5050 -j ACCEPT 
-A INPUT -s 62.82.24.134/32 -p tcp -m state --state NEW -m tcp --match multiport --dports 2612,2712,5601,9200,9300,5050,50075,50070,4040,8081,8001,9081,5051,9601,8080 -j ACCEPT 
-A INPUT -s 62.82.197.162/32 -p tcp -m state --state NEW -m tcp --match multiport --dports 2612,2712,5601,9200,9300,5050,50075,50070,4040,8081,8001,9081,5051,9601 -j ACCEPT 
-A INPUT -s 213.143.50.5/32 -p tcp -m state --state NEW -m tcp --match multiport --dports 2612,2712,5601,9200,9300,5050,50075,50070,4040,8081,8001,9081,5051,9601 -j ACCEPT 
-A INPUT -s 147.229.8.0/24 -p tcp -m state --state NEW -m tcp --dport 9200 -j ACCEPT 
-A INPUT -s 147.229.8.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 147.229.8.0/24 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 147.229.205.0/24 -p tcp -m state --state NEW -m tcp --dport 9200 -j ACCEPT 
-A INPUT -s 147.229.205.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 147.229.205.0/24 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 194.55.30.0/24 -p tcp -m state --state NEW -m tcp --dport 9200 -j ACCEPT 
-A INPUT -s 194.55.30.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 194.55.30.0/24 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 194.55.26.0/24 -p tcp -m state --state NEW -m tcp --dport 9200 -j ACCEPT 
-A INPUT -s 194.55.26.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 194.55.26.0/24 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 194.55.26.0/24 -p tcp -m state --state NEW -m tcp --dport 5601 -j ACCEPT 
-A INPUT -s 89.101.80.226/32 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 89.101.80.226/32 -p tcp -m state --state NEW -m tcp --match multiport --dports 22,9200,9300,9081,8001 -j ACCEPT 
-A INPUT -s 46.227.13.193/32 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 46.227.13.193/32 -p tcp -m state --state NEW -m tcp --match multiport --dports 22,9200,9300,9081,8001 -j ACCEPT 
-A INPUT -s 140.203.154.0/24 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 140.203.154.0/24 -p tcp -m state --state NEW -m tcp --match multiport --dports 22,9200,9300,9081,8001 -j ACCEPT 
-A INPUT -s 140.203.155.0/24 -p tcp -m state --state NEW -m tcp --dport 80:443 -j ACCEPT 
-A INPUT -s 140.203.155.0/24 -p tcp -m state --state NEW -m tcp --match multiport --dports 22,9200,9300,9081,8001 -j ACCEPT 
-A INPUT -s 93.63.190.66/32 -p tcp -m state --state NEW -m tcp --match multiport --dports 8600,8601 -j ACCEPT
-A INPUT -s 217.26.90.194/32 -p tcp -m state --state NEW -m tcp --match multiport --dports 8600,8601 -j ACCEPT
-A INPUT -s 147.229.8.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,8600,8601,9200,9300 -j ACCEPT
-A INPUT -s 138.4.3.173/25 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,8600,8601,9200,9300 -j ACCEPT
-A INPUT -s 176.74.139.227/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,8600,8601,9200,9300 -j ACCEPT
-A INPUT -s 77.240.177.148/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 22,8600,8601,9200,9300 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Tue Sep  8 09:34:52 2015
